--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ install:
   - npm install -g angular-cli-ghpages
 
 script:
-  - ng build --prod
+  - ng build --prod  --base-href https://lukecmstevens.co.uk/quidditch-scotland/
   - npx ngh --dir=dist/quidditch-scotland --repo=https://GH_TOKEN@github.com/lukecmstevens/quidditch-scotland.git --name="Luke Stevens" --email=lcm.stevens96@gmail.com
