--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles/base.css",
+              "src/styles/markdown.css",
+              "src/styles/device-opt.css"
             ],
             "scripts": [
               "node_modules/marked/lib/marked.js",
@@ -76,7 +78,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles/base.css"
             ],
             "scripts": [],
             "assets": [
