--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-markdown": "^7.1.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
