--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ install:
   - npm install -g angular-cli-ghpages
 
 script:
-  - ng build --prod  --base-href https://quidditchscotland.co.uk/
+  - ng build --prod --base-href https://quidditchscotland.co.uk/
+  - echo "quidditchscotland.co.uk" > dist/CNAME
   - npx ngh --dir=dist/quidditch-scotland --repo=https://GH_TOKEN@github.com/lukecmstevens/quidditch-scotland.git --name="Luke Stevens" --email=lcm.stevens96@gmail.com
