--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "downlevelIteration": true,
     "importHelpers": true,
     "outDir": "./dist/out-tsc",
+    "resolveJsonModule": true,
     "sourceMap": true,
     "declaration": false,
     "module": "esnext",
